# recommender-system

./: .dockerignore  .env  .env.example  .gitignore  .pylintrc  =1.17.3  Dockerfile  Makefile  README.md  config.mk  docker-compose.yml  example.env  healthcheck.sh  pyproject.toml  setup.cfg  startup  upload.py
alembic/: env.py
alembic/versions/: 050c022b34e8_update_5.py  051f512804af_init.py  24ada88867d7_auto_generate_tables.py  2b0086505fce_.py  2b69aed7c16e_first_migrations_3.py  30c0e3bbe39e_update_6.py  31900c0ee379_reset_migrations.py  388ca6628f15_update_4.py  4c32aece39b9_add_dauthor_name.py  4dad8f5382fa_update_6.py  5bdb03ade3d5_first_migrations.py  5ddf5387e4dc_add_date_dimension.py  64434f06a19b_reset_migrations.py  688f7021076a_added_account_table.py  6aaf4e54abcf_add_datetime_fields.py  81d9f612b7a3_add_title_database.py  8e81a8ffe5bd_.py  98e20904518b_create_copy_table.py  acd11e3eb0ac_first_migrations_2.py  be0fca24b190_update_3.py  be5762878ebb_add_location_table.py  ce168b9430a4_update_migrations.py  ced37b0f3266_update_6.py  (+1 more)
app/: dependencies.py  initial_data.py  main-old.py  main.py  utils.py
etl/: Apriori algorithm.ipynb  Apriori example.ipynb  Borrower Type.ipynb  Copies.ipynb  Copy Transactions.ipynb  Dates.ipynb  FPGrowth algorithm.ipynb  K-mean - users.ipynb  K-mean copies mas usadas - latest.ipynb  K-mean copies mas usadas.ipynb  K-mean example.ipynb  Kmeans algorithm.ipynb  Location.ipynb  Matriculados Pregrado.ipynb  Matriculados.ipynb  Titles.ipynb  Transaction Type.ipynb  Untitled.ipynb  mellisearch example.ipynb  queries.sql
(+54 files in other folders)
